// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialogs Extension Area Edit Dialog can be closed 1`] = `
<div class="el-dialog__wrapper" name="dialog-fade" style="z-index: 2003;">
  <div role="dialog" aria-modal="true" aria-label="My Title" class="el-dialog" style="margin-top: 15vh; width: 70%;">
    <div class="el-dialog__header"><span class="el-dialog__title">My Title</span><button type="button" aria-label="Close" class="el-dialog__headerbtn"><i class="el-dialog__close el-icon el-icon-close"></i></button></div>
    <div class="el-dialog__body">
      <elcollapse-stub accordion="true" value="">
        <div class="el-collapse-item" name="1">
          <div class="title">
            Context Situation 1 <i class="title-icon el-icon-back"></i> Process 1
          </div>
          <div class="content">
            <injectionmapping-stub injectionmapping="[object Object]"></injectionmapping-stub>
          </div>
        </div>
        <div class="el-collapse-item" name="2">
          <div class="title">
            Context Situation 2 <i class="title-icon el-icon-back"></i> Process 2
          </div>
          <div class="content">
            <injectionmapping-stub injectionmapping="[object Object]"></injectionmapping-stub>
          </div>
        </div>
      </elcollapse-stub>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Dialogs Extension Area Edit Dialog can render 1`] = `
<div class="el-dialog__wrapper" name="dialog-fade" style="z-index: 2001;">
  <div role="dialog" aria-modal="true" aria-label="My Title" class="el-dialog" style="margin-top: 15vh; width: 70%;">
    <div class="el-dialog__header"><span class="el-dialog__title">My Title</span><button type="button" aria-label="Close" class="el-dialog__headerbtn"><i class="el-dialog__close el-icon el-icon-close"></i></button></div>
    <div class="el-dialog__body">
      <elcollapse-stub accordion="true" value="">
        <div class="el-collapse-item" name="1">
          <div class="title">
            Context Situation 1 <i class="title-icon el-icon-back"></i> Process 1
          </div>
          <div class="content">
            <injectionmapping-stub injectionmapping="[object Object]"></injectionmapping-stub>
          </div>
        </div>
        <div class="el-collapse-item" name="2">
          <div class="title">
            Context Situation 2 <i class="title-icon el-icon-back"></i> Process 2
          </div>
          <div class="content">
            <injectionmapping-stub injectionmapping="[object Object]"></injectionmapping-stub>
          </div>
        </div>
      </elcollapse-stub>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Dialogs Extension Area Edit Dialog displays a fallback if title is not given via route params 1`] = `
<div class="el-dialog__wrapper" name="dialog-fade" style="z-index: 2009;">
  <div role="dialog" aria-modal="true" aria-label="extension_area.title" class="el-dialog" style="margin-top: 15vh; width: 70%;">
    <div class="el-dialog__header"><span class="el-dialog__title">extension_area.title</span><button type="button" aria-label="Close" class="el-dialog__headerbtn"><i class="el-dialog__close el-icon el-icon-close"></i></button></div>
    <!---->
    <!---->
  </div>
</div>
`;
